Fix header click layer with visible top panel

--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -753,6 +753,8 @@ body
       .blok
         &-Head
           z-index: 3
+          .side_Top
+            opacity: 1
         // &-ProjectList
         //   border-top-width: 0
         &-Project
