--- a/src/components/BlokHead/BlokHead.module.sass
+++ b/src/components/BlokHead/BlokHead.module.sass
@@ -29,6 +29,8 @@
     pointer-events: auto
 
 .row
+  position: relative
+  z-index: 2
   align-items: center
   gap: 0 !important
 
